tests/errors/semantic/blocking/HEADER_WRONG_NUMBER_TYPES.py
# pylint: disable=missing-function-docstring, missing-module-docstring
#$ header function func(int)
def func(n,m):
    return n + m
